# communitymusic

./: .gitignore  Cargo.toml  README.md  cmpexec  program  x
cliente_rust/: Cargo.toml
cliente_rust/src/: main.rs
notes/: dependencies.txt  gtk-code.txt  imports.txt  sfml-code.txt
rust-tk/src/: main.rs
src/: Cancion.cpp  ListaPaginada.c  Makefile  PagedArray.cpp  cacaarray.cpp  id3tags.cpp  main  main.cpp  main.rs  test.cpp  test.rs  testclient  testclient.cpp  testid3.cpp  testpagedarray.cpp  testserver  testserver.cpp
src/InterfazRust/cliente_rust/: Cargo.toml
src/InterfazRust/rust-tk/: Cargo.toml
src/app/: Interface.cpp  Interface.hpp  WindowA_C.cpp  WindowB1.cpp  WindowB2.cpp  config.ini
src/app/c++/: Interface.cpp  Interface.hpp  WindowA_C.cpp  WindowB1.cpp  WindowB2.cpp
src/app/res/: config.ini
src/app/rust/: client_gui.rs  mod.rs
src/gui/: Interface.cpp  Interface.hpp  WindowA_C.cpp  WindowB1.cpp  WindowB2.cpp
src/lib/: JSON_Array.cpp  JSON_Array.h  JSON_Dict.cpp  JSON_Dict.h  JSON_Value.cpp  JSON_Value.h  Vector.hpp  fJSON.cpp  fJSON.hpp
src/modules/c++/: CircularList.cpp  CircularList.h  CircularList.hpp  DoubleCircularList.hpp  DoubleLinkedList.h  DoubleLinkedList.hpp  DoublyLinkedList.hpp  GUI.hpp  LinkedList.h  LinkedList.hpp  MP3Tags.cpp  MP3Tags.hpp  MP3_to_WAV.cpp  MP3_to_WAV.h  Node.h  Node.hpp  Observe.hpp  PagedArray.cpp  PagedArray.hpp  Params.hpp  Server.cpp  Server.h  Server.hpp  SongData.hpp  args.h  fJSON.cpp  fJSON.hpp  id3tags.cpp
src/settings/: config.ini  file.json
src/test/: testpagedarray.cpp
(+4 files in other folders)
