[package]
name = "communitymusic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# export GTK_PATH = /usr/lib/linux_x86-64/gtk4.0
[dependencies]
serde_json = "1.0.114"
gtk = "0.18.1"
glib = "0.10.3"
glog = "0.1.0"
log = "0.4.21"
